# definable.backend

./: .dockerignore  .env.local  .gitignore  .pre-commit-config.yaml  CELERY_SETUP.md  CODE_OF_CONDUCT.md  Dockerfile  README.md  alembic.copy.ini  compose.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_celery_worker.py  scripts  scripts.bat  start_worker.bat  start_worker.sh
.cursor/rules/: tool-deployer.mdc
.github/workflows/: deploy.yml  pre-commit.yml  run-tests.yml
alembic/: env.py
alembic/versions/: 0178f5553318_add_and_update_llm_kb_charges.py  0bb3780d56dd_005_create_search_index.py  1a2b3c4d5e6f_019_add_agent_deployment_tables.py  2b3c4d5e6f7g_020_add_marketplace_tables.py  2b3c4d5e6f7g_020_create_jobs_table.py  3643ed7fee67_backfill_null_ids_in_charges.py  3c4d5e6f7g8h_021_add_url_extraction_charge.py  4a5b6c7d8e9f_022_create_mcp_tables.py  4a5b6c7d8e9f_023_create_mcp_tables.py  4d5e6f7g8h9i_022_add_plan_id_to_billing_plans.py  4dd488053d15_008_add_billing_system_tables.py  5e6f7g8h9i0j_023_create_customer.py  5e6f7g8h9i0j_024_create_customer.py  646684fd97f6_013_alter_agents_model.py  65b320fc1dfa_017_add_payment_region_support.py  6659124afc90_014_add_metadata_to_llm.py  6659124afc90_016_add_metadata_to_llm.py  6a4713935734_022_backfill_null_ids_in_charges.py  6f7g8h9i0j1k_026_add_billing_cycle_currency.py  7364319dc095_013_prompts.py  7g8h9i0j1k2_027_create_subscriptions_and_payment_providers.py  88cb9b1ef190_023_add_and_update_llm_kb_charges.py  8h9i0j1k2l3_028_create_transaction_logs_and_status_codes.py  94d74fb48263_022_fix_invites_references.py  94d74fb48263_023_fix_invites_references.py  94d74fb48263_025_fix_invites_references.py  9f6b02ca3265_002_create_models_and_agents.py  9i0j1k2l3m4_029_create_plan_features.py  a1b2c3d4e5f6_018_add_auth_tokens_and_api_keys.py  a7c65f3cd908_003_create_chats_and_messages.py  a7c65f3cd908_003_create_prompts_and_conversations.py  a8f51c3e9d12_008_create_invitations_table.py  aa9d2cf45c4d_011_add_get_usage_history_view.py  aa9d2cf45c4d_012_add_get_usage_history_view.py  ae5e495126f0_013_add_new_charges.py  ae5e495126f0_015_add_new_charges.py  ba6775663b8a_008_create_tools.py  ba6775663b8a_009_create_tools.py  bc44d043fa25_009_add_get_usage_history_view.py  bf55e877b87c_024_add_marketplace_tables.py  (+12 more)
docker/: Dockerfile
docs/: README.md  docs.json  index.mdx  install.sh  package-lock.json  package.json
docs/pages/: 404.mdx  architecture.mdx  authentication.mdx  introduction.mdx  overview.mdx  quickstart.mdx
src/: app.py
src/common/: __init__.py  cache.py  error.py  logger.py  logging.py  q.py  websocket.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  models copy.py  postgres.py  schema.py
src/dependencies/: __init__.py  security.py  usage.py
src/libs/: response.py
src/middlewares/: exceptions.py  ratelimit.py  tracker.py
src/models/: __init__.py  agent_deployment_model.py  agent_model.py  api_key_model.py  auth_model.py  billing_models.py  chat_model.py  conversation_model.py  invitations_model.py  job_model.py  kb_model.py  llm_category_model.py  llm_model.py  marketplace_model.py  mcp_model.py  mcp_tool_model.py  org_model.py  prompt_model.py  public_upload_model.py  role_model.py  subscription_model.py  tool_model.py
src/schemas/: __init__.py
src/scripts/: README.md  base_script.py  create_razorpay_plans.py  create_stripe_plans.py  delete_all_test_stytch_users.py  ensure_charges_props.py  ensure_model_props.py  example_script.py
src/tasks/: __init__.py  kb_tasks.py
src/utils/: __init__.py  __load_modules.py  auth_util.py  charge.py  email.py  s3.py  verify_wh.py
tests/: .env.test.sample  README.md  conftest.py
tests/api_tests/: __init__.py  conftest.py  test_agents.py  test_auth.py  test_conversation.py  test_generator.py  test_invitations.py  test_kb.py  test_llm.py  test_organization.py  test_public_upload.py  test_roles.py  test_tools.py
tests/libs/: __init__.py
tests/services/: test_agents.py  test_auth.py  test_billing.py  test_charges.py  test_chat.py  test_conversation.py  test_invitations.py  test_kb.py  test_llm.py  test_org.py  test_plans.py  test_prompts.py  test_public_upload.py  test_ws.py  (+3 more)
(+245 files in other folders)
