[tool.poetry]
name = "zyeta-backend"
version = "0.1.0"
description = "Your project description here"
authors = ["Anandesh Sharma <anandesh.sharma@dolbo.ai>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = {extras = ["standard"], version = "^0.115.8"}
pre-commit = ">=4.0.1,<5.0.0"
ruff = ">=0.8.6,<0.9.0"
mypy = ">=1.14.1,<2.0.0"
insightface = ">=0.7.3,<0.8.0"
opencv-python = ">=4.10.0.84,<5.0.0.0"
onnxruntime = ">=1.20.1,<2.0.0"
pytest = ">=8.3.4,<9.0.0"
pydantic-ai = ">=0.0.19,<0.0.20"
pyjwt = ">=2.10.1,<3.0.0"
python-dotenv = ">=1.0.1,<2.0.0"
pydantic-settings = ">=2.7.1,<3.0.0"
alembic = ">=1.14.0,<2.0.0"
asyncpg = ">=0.30.0,<0.31.0"
sqlalchemy = {version = ">=2.0.37,<3.0.0", extras = ["asyncio"]}
resend = ">=2.5.1,<3.0.0"
apscheduler = ">=3.11.0,<4.0.0"
stripe = ">=11.4.1,<12.0.0"
python-jose = {version = ">=3.3.0,<4.0.0", extras = ["cryptography"]}
langchain = ">=0.3.17,<0.4.0"
langchain-community = ">=0.3.16,<0.4.0"
langchain-core = ">=0.3.33,<0.4.0"
langchain-openai = ">=0.3.3,<0.4.0"
langchain-anthropic = ">=0.3.5,<0.4.0"
psycopg-pool = ">=3.2.4,<4.0.0"
langgraph-checkpoint-postgres = ">=2.0.13,<3.0.0"
langgraph = ">=0.2.69,<0.3.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
langchain-postgres = "^0.0.13"
aioboto3 = "^13.4.0"
loguru = "^0.7.3"
pypdf = "^5.3.0"
unstructured = "^0.16.20"
python-pptx = "^1.0.2"
python-docx = "^1.1.2"
ebooklib = "^0.18"
extract-msg = "^0.53.1"
openpyxl = "^3.1.5"
crawl4ai = "^0.4.248"
celery = "^5.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"