[project]
name = "zyeta-backend"
version = "0.1.0"
description = "Zyeta backend"
readme = "README.md"

authors = [
    {name = "Anandesh Sharma", email = "anandesh.sharma@dolbo.ai"},
]

requires-python = ">=3.10"
dependencies = [
    "agno>=1.3.1",
    "aioboto3>=14.1.0",
    "aiohttp>=3.11.16",
    "alembic>=1.15.2",
    "anthropic>=0.49.0",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "celery>=5.5.1",
    "docling>=2.30.0",
    "fastapi[standard]>=0.115.12",
    "firecrawl==1.12.0",
    "gunicorn>=23.0.0",
    "langchain-core>=0.3.52",
    "langchain-openai>=0.3.12",
    "langchain-postgres>=0.0.14",
    "loguru>=0.7.3",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "resend>=2.7.0",
    "ruff>=0.11.5",
    "sqlalchemy[asyncio]>=2.0.40",
    "stripe>=12.0.0",
    "stytch>=13.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
