[project]
name = "definable.backend"
version = "0.1.0"
description = "Definable backend"
readme = "README.md"

authors = [
    {name = "Anandesh Sharma", email = "anandesh.sharma@dolbo.ai"},
]

requires-python = ">=3.12"
dependencies = [
    "agno>=1.3.1",
    "aioboto3>=14.1.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.16",
    "alembic>=1.15.2",
    "anthropic>=0.49.0",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "celery>=5.5.1",
    "crawl4ai>=0.7.3",
    "docling>=2.30.0",
    "duckduckgo-search>=8.0.1",
    "fastapi[standard]>=0.115.12",
    "firecrawl==1.12.0",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "langchain-core>=0.3.52",
    "langchain-openai>=0.3.12",
    "langchain-postgres>=0.0.14",
    "langchain-text-splitters>=0.3.8",
    "loguru>=0.7.3",
    "lxml-html-clean>=0.4.2",
    "mypy>=1.15.0",
    "newspaper4k>=0.9.3.1",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "razorpay>=1.4.2",
    "redis>=6.4.0",
    "resend>=2.7.0",
    "ruff>=0.11.5",
    "setuptools>=78.1.0,<81",
    "sqlalchemy[asyncio]>=2.0.40",
    "stripe>=12.0.0",
    "stytch>=13.3.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "easyocr>=1.7.0",
    "pypdf>=6.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "types-aiofiles>=24.1.0.20250809"
]
